# blog

./: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  webpack.config.js
articles/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_auto_20210112_1710.py  0002_auto_20210113_1848.py  0003_auto_20210113_1948.py  0004_article_likes.py  0005_auto_20210117_0101.py  0006_auto_20210117_0102.py  0007_auto_20210117_0145.py  0008_auto_20210117_1654.py  0009_auto_20210118_0056.py  0010_user_profile_pic.py  0011_article_video.py  0012_comment_date.py  0013_auto_20210129_1649.py  0014_auto_20210207_1648.py  0015_auto_20210207_2137.py
assets/: index.js
assets/components/: comments.js  likeshare.js
assets/javascript/components/: comments.js
assets/styles/: article.scss  comments.scss  likes.scss  main.scss  root.scss
blog/: settings.py  urls.py
cdn_test/static/: index-bundle.js  index-bundle.js.LICENSE.txt
cdn_test/static/css/: article.css  main.css  projects.css
cdn_test/static/js/: article.js
cdn_test/static/js/snake/: snake.js
games/: models.py  urls.py  views.py
games/migrations/: 0001_initial.py
static/: index-bundle.js  index-bundle.js.LICENSE.txt
static/css/: article.css  comments.css  likes.css  main.css  root.css
static/js/: article.js  snake.js
templates/: base.html
templates/articles/: article.html  base.html  index.html  login.html  profile.html  projects.html  register.html
templates/games/: game.html  index.html
(+2 files in other folders)
