[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My Personal Blog"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.5"
markdown2 = "^2.3.10"
django-allauth = "^0.44.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
